# wine_quality

./: .gitignore  .pre-commit-config.yaml  LICENSE  main.py  pyproject.toml
src/wine_quality/: calc_metrics.py  data_visualization.ipynb  model_training_mc.ipynb
src/wine_quality/setup/: constants.py
